criar pagina menu

--- a/src/main/webapp/styles/global.css
+++ b/src/main/webapp/styles/global.css
@@ -7,7 +7,8 @@
 @import url('../dist/css/menu.css');
 @import url('../dist/css/products.css');
 @import url('../dist/css/table.css');
-
+@import url('../dist/css/menu.css');
+@import url('../dist/css/grid.css');
 
 * {
   margin: 0;
