style: Finalizar tela menu

--- a/src/main/webapp/styles/grid.scss
+++ b/src/main/webapp/styles/grid.scss
@@ -1,12 +1,11 @@
-.container{
-
-display: grid;
-grid-template-columns: repeat(12,1fr);
-grid-template-rows: auto;
-grid-gap: 7px;
+.container-12 {
+    display: grid;
+    grid-template-columns: repeat(12,1fr);
+    grid-template-rows: auto;
+    // grid-gap: 7px;
 
 }
 
-.col-4{
+.col-4 {
     grid-column: span 4;
 }
