--- a/src/main/webapp/styles/global.css
+++ b/src/main/webapp/styles/global.css
@@ -35,6 +35,11 @@ button {
   cursor: pointer;
 }
 
+a {
+  text-decoration: none;
+  color: #000;
+}
+
 .wrapper {
   max-width: 1366px;
   margin: 0 auto;
