--- a/src/main/webapp/styles/menu.scss
+++ b/src/main/webapp/styles/menu.scss
@@ -2,25 +2,49 @@
 
 #page-menu {
     width: 100vw;
-    height: 100vh;
+    height: 90vh;
     display: flex;
     justify-content: center;
     align-items: center;
 
     .menu-square {
         background: $secondary-color;
-        width: 600px;
-        height: 455px;
+        // width: 1200px;
+        // height: 600px;
+        padding: 3em 4em;
         border-radius: 7px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
            
         a {
             .menu-item {
-                width: 150px;
-                height: 100px;
+                width: 230px;
+                height: 190px;
                 background-color: $primary-color;
-                margin: 5px;
                 border-radius: 7px;
+                margin: 20px;
                 
+                display: flex;
+                flex-direction: column;
+                justify-content: space-evenly;
+                align-items: center;
+
+                transition: all 0.5s;
+                
+                i {
+                    color: $white-color;
+                    font-size: 4em;
+                }
+                span {
+                    color: $white-color;
+                    display: inline;
+                    font-weight: 700;
+                }
+                
+            }
+            .menu-item:hover {
+                opacity: 0.7;
             }
         
         }
