--- a/src/main/webapp/styles/global.css
+++ b/src/main/webapp/styles/global.css
@@ -6,6 +6,7 @@
 @import url('../dist/css/login.css');
 @import url('../dist/css/menu.css');
 @import url('../dist/css/products.css');
+@import url('../dist/css/order.css');
 @import url('../dist/css/table.css');
 @import url('../dist/css/menu.css');
 @import url('../dist/css/grid.css');
