style: Acertos no front-end

--- a/src/main/webapp/styles/topbar.scss
+++ b/src/main/webapp/styles/topbar.scss
@@ -11,12 +11,14 @@
     margin: 0 auto;
   }
 
-  .logo {
-    display: flex;
-    align-items: center;
+  a {
+      display: flex;
+      align-items: center;
+    .logo {
 
-    h1 {
-      color: $white-color;
+      h1 {
+        color: $white-color;
+      }
     }
   }
 
