--- a/src/main/webapp/styles/global.css
+++ b/src/main/webapp/styles/global.css
@@ -5,6 +5,7 @@
 /* Pages */
 @import url('../dist/css/login.css');
 @import url('../dist/css/menu.css');
+@import url('../dist/css/create-role.css');
 @import url('../dist/css/products.css');
 @import url('../dist/css/order.css');
 @import url('../dist/css/table.css');
