feat: Cadastrar novo funcionario

--- a/src/main/webapp/styles/global.css
+++ b/src/main/webapp/styles/global.css
@@ -7,6 +7,7 @@
 @import url('../dist/css/menu.css');
 @import url('../dist/css/products.css');
 @import url('../dist/css/create-role.css');
+@import url('../dist/css/create-employee.css');
 @import url('../dist/css/order.css');
 @import url('../dist/css/table.css');
 @import url('../dist/css/menu.css');
