--- a/src/main/webapp/styles/products.scss
+++ b/src/main/webapp/styles/products.scss
@@ -34,7 +34,44 @@
     height: 600px;
     margin-top: 1em;
     border-radius: 7px;
+
+    tbody {
+      tr {
+        td {
+          .column-delete {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            button {
+              background: transparent;
+            }
+          }
+        }
+      }
+    }
+    
   }
+
+  .create-new {
+    margin-top: 1em;
+    display: flex;
+    justify-content: flex-end;
+
+    .button-new {
+      height: 48px;
+      width: 120px;
+      background: $primary-color;
+      color: $white-color;
+      font-weight: 700;
+      border-radius: 7px;
+
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+
+
 }
 
 .button-search {
@@ -42,4 +79,5 @@
   background: $primary-color;
   color: $white-color;
   font-weight: 700;
+
 }
